--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,9 @@ filterwarnings = [
     # we ignore astropy warning (PyObject)
     "ignore:numpy.ndarray size changed, may indicate binary incompatibility. Expected 80 from C header, got 88 from PyObject:RuntimeWarning",
     # seaborn DeprecationWarning
-    "ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning"
+    "ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning",
+    # seaborn warning with Matplotlib
+    "ignore:Auto-removal of grids by pcolor() and pcolormesh() is deprecated since 3.5 and will be removed two minor releases later; please call grid(False) first.:matplotlib._api.deprecation.MatplotlibDeprecationWarning",
 ]
 
 [tool.coverage.run]
@@ -39,6 +41,7 @@ omit = [
 [tool.coverage.report]
 omit = [
   "oimalib/fit/*",
+  "oimalib/tests/*"
 ]
 
 [tool.mypy]
