Apply pre-commit all files

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,11 +6,12 @@ long_description_content_type = text/markdown
 url = https://github.com/DrSoulain/oimalib
 author = Anthony Soulain
 author_email = anthony.soulain@univ-grenoble-alpes.fr
-license = MIT
+license = GPL-3.0
 license_file = LICENSE
 classifiers =
     Development Status :: 3 - Alpha
     Intended Audience :: Science/Research
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     License :: OSI Approved :: MIT License
     Operating System :: MacOS :: MacOS X
     Operating System :: POSIX :: AIX
@@ -26,21 +27,20 @@ classifiers =
 [options]
 packages = find:
 install_requires =
+    astropy
+    astroquery
+    corner
+    emcee
     matplotlib
     munch
     numpy
-    emcee
-    astropy
+    pandas
+    pytest
     scipy
+    seaborn
     termcolor
     tqdm
     uncertainties
-    astroquery
-    corner
-    pytest
-    pandas
-    seaborn
-
 python_requires = >=3.8
 
 [options.packages.find]
