--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,14 @@ jobs:
     - name: Setup package
       # restricting to pip<22.0 because of pyvo
       # see https://github.com/astropy/pyvo/issues/296
-      run: |
-        python -m pip install --upgrade pip\<22.0.0
+      run:   |
+        if [ "$RUNNER_OS" == "Linux" ]; then
+            python -m pip install --upgrade pip\<22.0
+        elif [ "$RUNNER_OS" == "Windows" ]; then
+              python -m pip install --upgrade pip<22.0
+        elif [ "$RUNNER_OS" == "macOS" ]; then
+              python -m pip install --upgrade pip\<22.0
+        fi
         python -m pip install .[dev]
     - name: Run tests
       run: |
