--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,16 +35,8 @@ jobs:
       # restricting to pip<22.0 because of pyvo
       # see https://github.com/astropy/pyvo/issues/296
       run:   |
-        if [ "$RUNNER_OS" == "Linux" ]; then
-            python -m pip install --upgrade pip\<22.0
-            python -m pip install .[dev]
-        elif [ "$RUNNER_OS" == "Windows" ]; then
-            python -m pip install --upgrade pip<22.0
-            python -m pip install .[dev]
-        elif [ "$RUNNER_OS" == "macOS" ]; then
-            python -m pip install --upgrade pip\<22.0
-            python -m pip install .[dev]
-        fi
+        python -m pip install --upgrade "pip < 22.0"
+        python -m pip install .[dev]
 
     - name: Run tests
       run: |
